--- a/web/backtest.html
+++ b/web/backtest.html
@@ -35,6 +35,13 @@
                 </svg>
                 Feature Universe
             </a>
+            <a href="analysis.html" class="nav-item">
+                <svg class="nav-icon" viewBox="0 0 24 24">
+                    <path
+                        d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z" />
+                </svg>
+                Analysis
+            </a>
             <a href="backtest.html" class="nav-item active">
                 <svg class="nav-icon" viewBox="0 0 24 24">
                     <path d="M3.5 18.49l6-6.01 4 4L22 6.92l-1.41-1.41-7.09 7.97-4-4L2 16.99z" />
@@ -47,80 +54,92 @@
     <!-- Main Content -->
     <main class="main-content">
         <div class="container">
-            <header>
-                <h1>Backtest</h1>
-                <p class="subtitle">Select a model and run a rule-based backtest</p>
-            </header>
-
-            <!-- Model Selection Section -->
-            <div class="builder-section">
-                <div class="builder-header">
-                    <h3>Top 5 Approved Models</h3>
-                    <span class="selected-count" id="selected-model-label">Select a model to test</span>
-                </div>
-
-                <div class="model-cards" id="model-cards">
-                    <!-- JS Populated -->
-                </div>
-            </div>
-
-            <!-- Selected Model Details -->
-            <div id="model-detail-section" class="results-section" style="display:none;">
-                <div class="section-header"
-                    style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
-                    <h3 id="selected-model-title">Model Details</h3>
-                    <button class="btn-primary" id="run-test-btn" onclick="app.runModelBacktest()">
-                        Run Backtest
-                    </button>
-                </div>
-
-                <!-- Metrics -->
-                <div class="result-metrics" id="result-metrics">
-                    <div class="metric-card">
-                        <div class="metric-label">Total Return (%)</div>
-                        <div class="metric-value" id="m-total-return">-</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-label">Entry Signals</div>
-                        <div class="metric-value" id="m-entry-signals">-</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-label">Trades</div>
-                        <div class="metric-value" id="m-trades">-</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-label">Win Rate</div>
-                        <div class="metric-value" id="m-winrate">-</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-label">Max Drawdown</div>
-                        <div class="metric-value" id="m-mdd">-</div>
-                    </div>
-                </div>
-
-                <!-- Indicator Composition -->
-                <div style="margin-top:24px; margin-bottom:20px;">
-                    <div
-                        style="font-size:12px; color:#86868B; text-transform:uppercase; font-weight:600; margin-bottom:10px;">
-                        Indicator Composition</div>
-                    <div id="model-comp-grid" class="comp-grid"></div>
-                </div>
-
-                <!-- Equity Curve -->
-                <div class="chart-wrapper">
-                    <div id="model-chart"></div>
-                </div>
-
-                <div id="backtest-summary" class="summary-box" style="display:none; margin-top:24px;">
-                    <div class="summary-title">Backtest Summary</div>
-                    <div id="backtest-summary-text" class="summary-text"></div>
-                </div>
-            </div>
-
+            </a>
         </div>
-    </main>
+        </nav>
 
-    <script src="app.js"></script>
+        <!-- Main Content -->
+        <main class="main-content">
+            <div class="container">
+                <header>
+                    <h1>Backtest</h1>
+                    <p class="subtitle">Select a model and run a rule-based backtest</p>
+
+                    <!-- Model Selection Section -->
+                    <div class="builder-section">
+                        <div class="builder-header">
+                            <div style="display:flex; align-items:center; gap:15px;">
+                                <h3>Top 5 Approved Models</h3>
+                                <label style="font-size: 13px; color: #86868B; cursor: pointer;">
+                                    <input type="checkbox" id="bt-include-rejected" onchange="app.renderModelCards()">
+                                    Include Rejected
+                                </label>
+                            </div>
+                            <span class="selected-count" id="selected-model-label">Select a model to test</span>
+                        </div>
+
+                        <div class="model-cards" id="model-cards">
+                            <!-- JS Populated -->
+                        </div>
+                    </div>
+
+                    <!-- Selected Model Details -->
+                    <div id="model-detail-section" class="results-section" style="display:none;">
+                        <div class="section-header"
+                            style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+                            <h3 id="selected-model-title">Model Details</h3>
+                            <button class="btn-primary" id="run-test-btn" onclick="app.runModelBacktest()">
+                                Run Backtest
+                            </button>
+                        </div>
+
+                        <!-- Metrics -->
+                        <div class="result-metrics" id="result-metrics">
+                            <div class="metric-card">
+                                <div class="metric-label">Total Return (%)</div>
+                                <div class="metric-value" id="m-total-return">-</div>
+                            </div>
+                            <div class="metric-card">
+                                <div class="metric-label">Entry Signals</div>
+                                <div class="metric-value" id="m-entry-signals">-</div>
+                            </div>
+                            <div class="metric-card">
+                                <div class="metric-label">Trades</div>
+                                <div class="metric-value" id="m-trades">-</div>
+                            </div>
+                            <div class="metric-card">
+                                <div class="metric-label">Win Rate</div>
+                                <div class="metric-value" id="m-winrate">-</div>
+                            </div>
+                            <div class="metric-card">
+                                <div class="metric-label">Max Drawdown</div>
+                                <div class="metric-value" id="m-mdd">-</div>
+                            </div>
+                        </div>
+
+                        <!-- Indicator Composition -->
+                        <div style="margin-top:24px; margin-bottom:20px;">
+                            <div
+                                style="font-size:12px; color:#86868B; text-transform:uppercase; font-weight:600; margin-bottom:10px;">
+                                Indicator Composition</div>
+                            <div id="model-comp-grid" class="comp-grid"></div>
+                        </div>
+
+                        <!-- Equity Curve -->
+                        <div class="chart-wrapper">
+                            <div id="model-chart"></div>
+                        </div>
+
+                        <div id="backtest-summary" class="summary-box" style="display:none; margin-top:24px;">
+                            <div class="summary-title">Backtest Summary</div>
+                            <div id="backtest-summary-text" class="summary-text"></div>
+                        </div>
+                    </div>
+
+            </div>
+        </main>
+
+        <script src="app.js?v=2"></script>
 </body>
 
 </html>
