--- a/web/features.html
+++ b/web/features.html
@@ -35,6 +35,13 @@
                 </svg>
                 Feature Universe
             </a>
+            <a href="analysis.html" class="nav-item">
+                <svg class="nav-icon" viewBox="0 0 24 24">
+                    <path
+                        d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z" />
+                </svg>
+                Analysis
+            </a>
             <a href="backtest.html" class="nav-item">
                 <svg class="nav-icon" viewBox="0 0 24 24">
                     <path d="M3.5 18.49l6-6.01 4 4L22 6.92l-1.41-1.41-7.09 7.97-4-4L2 16.99z" />
@@ -51,6 +58,11 @@
                 <h1>Feature Universe</h1>
                 <p class="subtitle">Available Indicators & Parameters - Click to Visualize</p>
             </header>
+
+            <!-- Feature Stats Summary -->
+            <div id="feature-stats" class="kpi-grid" style="margin-bottom: 30px;">
+                <!-- Filled by JS -->
+            </div>
 
             <!-- Preview Section (Hidden by Default) -->
             <div id="feature-preview-container" class="preview-container" style="display:none;">
