--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,13 @@
                 </svg>
                 Feature Universe
             </a>
+            <a href="analysis.html" class="nav-item">
+                <svg class="nav-icon" viewBox="0 0 24 24">
+                    <path
+                        d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z" />
+                </svg>
+                Analysis
+            </a>
             <a href="backtest.html" class="nav-item">
                 <svg class="nav-icon" viewBox="0 0 24 24">
                     <path d="M3.5 18.49l6-6.01 4 4L22 6.92l-1.41-1.41-7.09 7.97-4-4L2 16.99z" />
@@ -90,6 +97,10 @@
             <div class="section-header">
                 <div class="section-title">Top 5 Recent Strategies</div>
                 <div class="control-group">
+                    <label style="margin-right: 15px; font-size: 13px; color: #86868B; cursor: pointer;">
+                        <input type="checkbox" id="dash-include-rejected" onchange="app.renderDashTable()"> Include
+                        Rejected
+                    </label>
                     <a href="history.html" class="link-btn">View All &rarr;</a>
                 </div>
             </div>
@@ -114,7 +125,7 @@
         </div>
     </main>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=2"></script>
 </body>
 
 </html>
