--- a/web/history.html
+++ b/web/history.html
@@ -58,6 +58,8 @@
                 <p class="subtitle">Search and Analyze All Strategies</p>
             </header>
 
+            <div id="kpi-grid" class="kpi-grid"></div>
+
             <div class="section-header">
                 <div class="search-container">
                     <svg class="search-icon-img" viewBox="0 0 24 24">
