--- a/web/backtest.html
+++ b/web/backtest.html
@@ -112,6 +112,14 @@
                         <div class="metric-label">Max Drawdown</div>
                         <div class="metric-value" id="m-mdd">-</div>
                     </div>
+                    <div class="metric-card">
+                        <div class="metric-label">Profit Factor</div>
+                        <div class="metric-value" id="m-pf">-</div>
+                    </div>
+                    <div class="metric-card">
+                        <div class="metric-label">Trades / Year</div>
+                        <div class="metric-value" id="m-tpy">-</div>
+                    </div>
                 </div>
 
                 <!-- Indicator Composition -->
